--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "axios": "^0.21.1",
     "csv-parse": "^4.15.4",
     "findit": "^2.0.0",
+    "mkdirp": "^1.0.4",
     "neat-csv": "^6.0.1",
     "net": "^1.0.2",
-    "node-libcurl": "^2.3.3",
     "node-gyp": "^8.1.0",
+    "node-libcurl": "^2.3.3",
     "querystring": "^0.2.1",
     "rebuild": "^0.1.2",
     "sleep": "^6.3.0"
